@@ -1,8 +1,9 @@
 package com.basic;
 
 import lombok.Data;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.openjdk.jol.info.ClassLayout;
+
 
 public class ObjectTest {
 
@@ -15,7 +16,7 @@ public class ObjectTest {
 
     /*
      * jol 分析对象布局
-     * markword 锁信息 00000101(偏向锁) 可通过 XX:+UseBiasedLocking 关闭默认开启偏向锁
+     * markword 锁信息 00000101(偏向锁) 可通过 -XX:-UseBiasedLocking 关闭默认开启偏向锁
      */
     @Test
     public void test1() {
